Add images to img folder
Co-authored-by: Alex Shevlin <alexshevlin1@gmail.com>
Co-authored-by: Jonathan Lu <jdlu.coding@gmail.com>

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -49,10 +49,30 @@
   <h3>Flavors of ice cream</h3>
   <p>These are my three favorites, in order:</p>
   <ol>
-    <li>Pistachio</li>
-    <li>Malted milk chocolate</li>
-    <li>Black licorice (really!)</li>
+    <li>
+      Pistachio
+      <img src="img/pistachio_icecream.jpeg" alt="A photo of pistachio ice cream.">
+    </li>
+    <li>
+      Malted milk chocolate
+      <img src="img/maltmilkchocolate_icecream.jpeg" alt="A photo of malted milk chocolate ice cream.">
+    </li>
+    <li>
+      Black licorice (really!)
+      <img src="img/blacklicorice_icecream.jpeg" alt="A photo of black licorice ice cream.">
+    </li>
   </ol>
+
+  <h3>Favorite websites</h3>
+  <p>These are my two favorites, not in order:</p>
+  <ul>
+    <li>
+      <a href="https://old.reddit.com">Reddit</a>
+    </li>
+    <li>
+      <a href="https://www.twitch.com">Twitch</a>
+    </li>
+  </ul>
 
   <p>Thanks for reading about me!</p>
 </body>
