change cat image in my-first-webpage.html to be centered
Co-authored-by: Mo Byrne <mosey.b.byrne@gmail.com>

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -20,6 +20,6 @@
   </ul>
   <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
   <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
-  <img src="img/kitten.png" alt="A photo of a cute kitten.">
+  <img class="centered-image" src="img/kitten.png" alt="A photo of a cute kitten.">
 </body>
 </html>
